antlr/wenyanParser.cpp

// Generated from wenyan.g4 by ANTLR 4.7.2


#include "wenyanListener.h"

#include "wenyanParser.h"


using namespace antlrcpp;
using namespace antlr4;

wenyanParser::wenyanParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

wenyanParser::~wenyanParser() {
  delete _interpreter;
}

std::string wenyanParser::getGrammarFileName() const {
  return "wenyan.g4";
}

const std::vector<std::string>& wenyanParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& wenyanParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

wenyanParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<wenyanParser::StatementContext *> wenyanParser::ProgramContext::statement() {
  return getRuleContexts<wenyanParser::StatementContext>();
}

wenyanParser::StatementContext* wenyanParser::ProgramContext::statement(size_t i) {
  return getRuleContext<wenyanParser::StatementContext>(i);
}


size_t wenyanParser::ProgramContext::getRuleIndex() const {
  return wenyanParser::RuleProgram;
}

void wenyanParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void wenyanParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

wenyanParser::ProgramContext* wenyanParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, wenyanParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << wenyanParser::T__0)
      | (1ULL << wenyanParser::T__4)
      | (1ULL << wenyanParser::T__6)
      | (1ULL << wenyanParser::T__7)
      | (1ULL << wenyanParser::T__8)
      | (1ULL << wenyanParser::T__9)
      | (1ULL << wenyanParser::T__11)
      | (1ULL << wenyanParser::T__21)
      | (1ULL << wenyanParser::T__23)
      | (1ULL << wenyanParser::T__24)
      | (1ULL << wenyanParser::T__25)
      | (1ULL << wenyanParser::T__29)
      | (1ULL << wenyanParser::T__30)
      | (1ULL << wenyanParser::T__31)
      | (1ULL << wenyanParser::T__32)
      | (1ULL << wenyanParser::T__40)
      | (1ULL << wenyanParser::T__41)
      | (1ULL << wenyanParser::T__42)
      | (1ULL << wenyanParser::T__43)
      | (1ULL << wenyanParser::T__44)
      | (1ULL << wenyanParser::ARITH_BINARY_OP)
      | (1ULL << wenyanParser::UNARY_OP)
      | (1ULL << wenyanParser::IF)
      | (1ULL << wenyanParser::FOR_START_ARR)
      | (1ULL << wenyanParser::FOR_START_ENUM)
      | (1ULL << wenyanParser::FOR_START_WHILE))) != 0) || _la == wenyanParser::BREAK) {
      setState(80);
      statement();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

wenyanParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

wenyanParser::Declare_statementContext* wenyanParser::StatementContext::declare_statement() {
  return getRuleContext<wenyanParser::Declare_statementContext>(0);
}

wenyanParser::Define_statementContext* wenyanParser::StatementContext::define_statement() {
  return getRuleContext<wenyanParser::Define_statementContext>(0);
}

wenyanParser::Print_statementContext* wenyanParser::StatementContext::print_statement() {
  return getRuleContext<wenyanParser::Print_statementContext>(0);
}

wenyanParser::For_statementContext* wenyanParser::StatementContext::for_statement() {
  return getRuleContext<wenyanParser::For_statementContext>(0);
}

wenyanParser::Function_statementContext* wenyanParser::StatementContext::function_statement() {
  return getRuleContext<wenyanParser::Function_statementContext>(0);
}

wenyanParser::If_statementContext* wenyanParser::StatementContext::if_statement() {
  return getRuleContext<wenyanParser::If_statementContext>(0);
}

wenyanParser::Return_statementContext* wenyanParser::StatementContext::return_statement() {
  return getRuleContext<wenyanParser::Return_statementContext>(0);
}

wenyanParser::Math_statementContext* wenyanParser::StatementContext::math_statement() {
  return getRuleContext<wenyanParser::Math_statementContext>(0);
}

wenyanParser::Assign_statementContext* wenyanParser::StatementContext::assign_statement() {
  return getRuleContext<wenyanParser::Assign_statementContext>(0);
}

wenyanParser::Import_statementContext* wenyanParser::StatementContext::import_statement() {
  return getRuleContext<wenyanParser::Import_statementContext>(0);
}

wenyanParser::Object_statementContext* wenyanParser::StatementContext::object_statement() {
  return getRuleContext<wenyanParser::Object_statementContext>(0);
}

wenyanParser::Pick_up_statementContext* wenyanParser::StatementContext::pick_up_statement() {
  return getRuleContext<wenyanParser::Pick_up_statementContext>(0);
}

wenyanParser::Array_statementContext* wenyanParser::StatementContext::array_statement() {
  return getRuleContext<wenyanParser::Array_statementContext>(0);
}

wenyanParser::Clean_statementContext* wenyanParser::StatementContext::clean_statement() {
  return getRuleContext<wenyanParser::Clean_statementContext>(0);
}

tree::TerminalNode* wenyanParser::StatementContext::BREAK() {
  return getToken(wenyanParser::BREAK, 0);
}

wenyanParser::CommentContext* wenyanParser::StatementContext::comment() {
  return getRuleContext<wenyanParser::CommentContext>(0);
}


size_t wenyanParser::StatementContext::getRuleIndex() const {
  return wenyanParser::RuleStatement;
}

void wenyanParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void wenyanParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

wenyanParser::StatementContext* wenyanParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, wenyanParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(86);
      declare_statement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(87);
      define_statement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(88);
      print_statement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(89);
      for_statement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(90);
      function_statement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(91);
      if_statement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(92);
      return_statement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(93);
      math_statement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(94);
      assign_statement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(95);
      import_statement();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(96);
      object_statement();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(97);
      pick_up_statement();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(98);
      array_statement();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(99);
      clean_statement();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(100);
      match(wenyanParser::BREAK);
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(101);
      comment();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pick_up_statementContext ------------------------------------------------------------------

wenyanParser::Pick_up_statementContext::Pick_up_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

wenyanParser::DataContext* wenyanParser::Pick_up_statementContext::data() {
  return getRuleContext<wenyanParser::DataContext>(0);
}

wenyanParser::Reference_single_statementContext* wenyanParser::Pick_up_statementContext::reference_single_statement() {
  return getRuleContext<wenyanParser::Reference_single_statementContext>(0);
}

tree::TerminalNode* wenyanParser::Pick_up_statementContext::STRING_LITERAL() {
  return getToken(wenyanParser::STRING_LITERAL, 0);
}

tree::TerminalNode* wenyanParser::Pick_up_statementContext::INT_NUM() {
  return getToken(wenyanParser::INT_NUM, 0);
}

tree::TerminalNode* wenyanParser::Pick_up_statementContext::IDENTIFIER() {
  return getToken(wenyanParser::IDENTIFIER, 0);
}


size_t wenyanParser::Pick_up_statementContext::getRuleIndex() const {
  return wenyanParser::RulePick_up_statement;
}

void wenyanParser::Pick_up_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPick_up_statement(this);
}

void wenyanParser::Pick_up_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPick_up_statement(this);
}

wenyanParser::Pick_up_statementContext* wenyanParser::pick_up_statement() {
  Pick_up_statementContext *_localctx = _tracker.createInstance<Pick_up_statementContext>(_ctx, getState());
  enterRule(_localctx, 4, wenyanParser::RulePick_up_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(wenyanParser::T__0);
    setState(105);
    data();
    setState(108);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == wenyanParser::T__1) {
      setState(106);
      match(wenyanParser::T__1);
      setState(107);
      _la = _input->LA(1);
      if (!(((((_la - 3) & ~ 0x3fULL) == 0) &&
        ((1ULL << (_la - 3)) & ((1ULL << (wenyanParser::T__2 - 3))
        | (1ULL << (wenyanParser::T__3 - 3))
        | (1ULL << (wenyanParser::STRING_LITERAL - 3))
        | (1ULL << (wenyanParser::IDENTIFIER - 3))
        | (1ULL << (wenyanParser::INT_NUM - 3)))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(111);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == wenyanParser::T__22) {
      setState(110);
      reference_single_statement();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Array_statementContext ------------------------------------------------------------------

wenyanParser::Array_statementContext::Array_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

wenyanParser::Array_cat_statementContext* wenyanParser::Array_statementContext::array_cat_statement() {
  return getRuleContext<wenyanParser::Array_cat_statementContext>(0);
}

wenyanParser::Array_push_statementContext* wenyanParser::Array_statementContext::array_push_statement() {
  return getRuleContext<wenyanParser::Array_push_statementContext>(0);
}


size_t wenyanParser::Array_statementContext::getRuleIndex() const {
  return wenyanParser::RuleArray_statement;
}

void wenyanParser::Array_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArray_statement(this);
}

void wenyanParser::Array_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArray_statement(this);
}

wenyanParser::Array_statementContext* wenyanParser::array_statement() {
  Array_statementContext *_localctx = _tracker.createInstance<Array_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, wenyanParser::RuleArray_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case wenyanParser::T__4: {
        enterOuterAlt(_localctx, 1);
        setState(113);
        array_cat_statement();
        break;
      }

      case wenyanParser::T__6: {
        enterOuterAlt(_localctx, 2);
        setState(114);
        array_push_statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Array_cat_statementContext ------------------------------------------------------------------

wenyanParser::Array_cat_statementContext::Array_cat_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> wenyanParser::Array_cat_statementContext::IDENTIFIER() {
  return getTokens(wenyanParser::IDENTIFIER);
}

tree::TerminalNode* wenyanParser::Array_cat_statementContext::IDENTIFIER(size_t i) {
  return getToken(wenyanParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> wenyanParser::Array_cat_statementContext::PREPOSITION_YI() {
  return getTokens(wenyanParser::PREPOSITION_YI);
}

tree::TerminalNode* wenyanParser::Array_cat_statementContext::PREPOSITION_YI(size_t i) {
  return getToken(wenyanParser::PREPOSITION_YI, i);
}

wenyanParser::Reference_single_statementContext* wenyanParser::Array_cat_statementContext::reference_single_statement() {
  return getRuleContext<wenyanParser::Reference_single_statementContext>(0);
}


size_t wenyanParser::Array_cat_statementContext::getRuleIndex() const {
  return wenyanParser::RuleArray_cat_statement;
}

void wenyanParser::Array_cat_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArray_cat_statement(this);
}

void wenyanParser::Array_cat_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArray_cat_statement(this);
}

wenyanParser::Array_cat_statementContext* wenyanParser::array_cat_statement() {
  Array_cat_statementContext *_localctx = _tracker.createInstance<Array_cat_statementContext>(_ctx, getState());
  enterRule(_localctx, 8, wenyanParser::RuleArray_cat_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(wenyanParser::T__4);
    setState(118);
    _la = _input->LA(1);
    if (!(_la == wenyanParser::T__5

    || _la == wenyanParser::IDENTIFIER)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(121); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(119);
      match(wenyanParser::PREPOSITION_YI);
      setState(120);
      match(wenyanParser::IDENTIFIER);
      setState(123); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == wenyanParser::PREPOSITION_YI);
    setState(126);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == wenyanParser::T__22) {
      setState(125);
      reference_single_statement();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Array_push_statementContext ------------------------------------------------------------------

wenyanParser::Array_push_statementContext::Array_push_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* wenyanParser::Array_push_statementContext::IDENTIFIER() {
  return getToken(wenyanParser::IDENTIFIER, 0);
}

std::vector<tree::TerminalNode *> wenyanParser::Array_push_statementContext::PREPOSITION_YI() {
  return getTokens(wenyanParser::PREPOSITION_YI);
}

tree::TerminalNode* wenyanParser::Array_push_statementContext::PREPOSITION_YI(size_t i) {
  return getToken(wenyanParser::PREPOSITION_YI, i);
}

std::vector<wenyanParser::DataContext *> wenyanParser::Array_push_statementContext::data() {
  return getRuleContexts<wenyanParser::DataContext>();
}

wenyanParser::DataContext* wenyanParser::Array_push_statementContext::data(size_t i) {
  return getRuleContext<wenyanParser::DataContext>(i);
}

wenyanParser::Reference_single_statementContext* wenyanParser::Array_push_statementContext::reference_single_statement() {
  return getRuleContext<wenyanParser::Reference_single_statementContext>(0);
}


size_t wenyanParser::Array_push_statementContext::getRuleIndex() const {
  return wenyanParser::RuleArray_push_statement;
}

void wenyanParser::Array_push_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArray_push_statement(this);
}

void wenyanParser::Array_push_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArray_push_statement(this);
}

wenyanParser::Array_push_statementContext* wenyanParser::array_push_statement() {
  Array_push_statementContext *_localctx = _tracker.createInstance<Array_push_statementContext>(_ctx, getState());
  enterRule(_localctx, 10, wenyanParser::RuleArray_push_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(wenyanParser::T__6);
    setState(129);
    _la = _input->LA(1);
    if (!(_la == wenyanParser::T__5

    || _la == wenyanParser::IDENTIFIER)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(132); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(130);
      match(wenyanParser::PREPOSITION_YI);
      setState(131);
      data();
      setState(134); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == wenyanParser::PREPOSITION_YI);
    setState(137);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == wenyanParser::T__22) {
      setState(136);
      reference_single_statement();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_statementContext ------------------------------------------------------------------

wenyanParser::Function_statementContext::Function_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

wenyanParser::Function_define_statementContext* wenyanParser::Function_statementContext::function_define_statement() {
  return getRuleContext<wenyanParser::Function_define_statementContext>(0);
}

wenyanParser::Function_call_statementContext* wenyanParser::Function_statementContext::function_call_statement() {
  return getRuleContext<wenyanParser::Function_call_statementContext>(0);
}

wenyanParser::Reference_single_statementContext* wenyanParser::Function_statementContext::reference_single_statement() {
  return getRuleContext<wenyanParser::Reference_single_statementContext>(0);
}


size_t wenyanParser::Function_statementContext::getRuleIndex() const {
  return wenyanParser::RuleFunction_statement;
}

void wenyanParser::Function_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_statement(this);
}

void wenyanParser::Function_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_statement(this);
}

wenyanParser::Function_statementContext* wenyanParser::function_statement() {
  Function_statementContext *_localctx = _tracker.createInstance<Function_statementContext>(_ctx, getState());
  enterRule(_localctx, 12, wenyanParser::RuleFunction_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(144);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case wenyanParser::T__11: {
        enterOuterAlt(_localctx, 1);
        setState(139);
        function_define_statement();
        break;
      }

      case wenyanParser::T__7:
      case wenyanParser::T__8:
      case wenyanParser::T__9: {
        enterOuterAlt(_localctx, 2);
        setState(140);
        function_call_statement();
        setState(142);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == wenyanParser::T__22) {
          setState(141);
          reference_single_statement();
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_call_statementContext ------------------------------------------------------------------

wenyanParser::Function_call_statementContext::Function_call_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

wenyanParser::Function_plain_callContext* wenyanParser::Function_call_statementContext::function_plain_call() {
  return getRuleContext<wenyanParser::Function_plain_callContext>(0);
}

wenyanParser::Function_nested_callContext* wenyanParser::Function_call_statementContext::function_nested_call() {
  return getRuleContext<wenyanParser::Function_nested_callContext>(0);
}


size_t wenyanParser::Function_call_statementContext::getRuleIndex() const {
  return wenyanParser::RuleFunction_call_statement;
}

void wenyanParser::Function_call_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_call_statement(this);
}

void wenyanParser::Function_call_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_call_statement(this);
}

wenyanParser::Function_call_statementContext* wenyanParser::function_call_statement() {
  Function_call_statementContext *_localctx = _tracker.createInstance<Function_call_statementContext>(_ctx, getState());
  enterRule(_localctx, 14, wenyanParser::RuleFunction_call_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(148);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case wenyanParser::T__7:
      case wenyanParser::T__8: {
        enterOuterAlt(_localctx, 1);
        setState(146);
        function_plain_call();
        break;
      }

      case wenyanParser::T__9: {
        enterOuterAlt(_localctx, 2);
        setState(147);
        function_nested_call();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_plain_callContext ------------------------------------------------------------------

wenyanParser::Function_plain_callContext::Function_plain_callContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* wenyanParser::Function_plain_callContext::IDENTIFIER() {
  return getToken(wenyanParser::IDENTIFIER, 0);
}

std::vector<wenyanParser::PrepositionContext *> wenyanParser::Function_plain_callContext::preposition() {
  return getRuleContexts<wenyanParser::PrepositionContext>();
}

wenyanParser::PrepositionContext* wenyanParser::Function_plain_callContext::preposition(size_t i) {
  return getRuleContext<wenyanParser::PrepositionContext>(i);
}

std::vector<wenyanParser::DataContext *> wenyanParser::Function_plain_callContext::data() {
  return getRuleContexts<wenyanParser::DataContext>();
}

wenyanParser::DataContext* wenyanParser::Function_plain_callContext::data(size_t i) {
  return getRuleContext<wenyanParser::DataContext>(i);
}


size_t wenyanParser::Function_plain_callContext::getRuleIndex() const {
  return wenyanParser::RuleFunction_plain_call;
}

void wenyanParser::Function_plain_callContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_plain_call(this);
}

void wenyanParser::Function_plain_callContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<wenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_plain_call(this);
}

wenyanParser::Function_plain_callContext* wenyanParser::function_plain_call() {
  Function_plain_callContext *_localctx = _tracker.createInstance<Function_plain_callContext>(_ctx, getState());
  enterRule(_localctx, 16, wenyanParser::RuleFunction_plain_call);
  size_t _la = 0;
